<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_edit_address_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/tv_edit_address_title"
        android:textColor="?colorSurface"
        android:textSize="30sp"
        android:gravity="center"
        android:background="?colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide_top"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_edit_address_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="16sp"
        android:textColor="?colorOnBackground"
        android:text="@string/tv_edit_address_description"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintBottom_toTopOf="@id/tv_examples"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_examples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/edit_address_examples"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/address_input_margin"
        android:layout_marginStart="@dimen/address_input_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_address_description"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_address"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/address_input_margin"
        android:layout_marginStart="@dimen/address_input_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintHorizontal_weight="0.75"
        app:layout_constraintTop_toBottomOf="@id/tv_examples"
        app:layout_constraintEnd_toStartOf="@id/btn_set_address"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:hint="@string/ti_address_hint">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_address"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="@dimen/address_input_margin"
        android:text="@string/btn_set_address_text"
        android:lines="1"
        android:textSize="18sp"
        app:backgroundTint="?colorSecondary"
        app:layout_constraintHorizontal_weight="0.25"
        app:layout_constraintStart_toEndOf="@id/ti_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ti_address"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/ti_address"/>

</androidx.constraintlayout.widget.ConstraintLayout>